--- a/3Dmap.html
+++ b/3Dmap.html
@@ -22,16 +22,16 @@
         </div>
         <ul class="nav">
             <li>
-                <a href="#">首页</a>
+                <a href="#step=1">全国</a>
             </li>
             <li>
-                <a href="#">交互平台</a>
+                <a href="#step=2">北京地区</a>
             </li>
             <li>
-                <a href="#">交互平台</a>
+                <a href="#step=3">朝阳地区</a>
             </li>
             <li>
-                <a href="#">交互平台</a>
+                <a href="#">信息统计</a>
             </li>
         </ul>
     </div>
