--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>3D地图</title>
     <link href="./css/3Dmap.css" rel="stylesheet" />
-    <script language="javascript" src="http://webapi.amap.com/maps?v=1.4.9&key=8845df0c0040e4aa27ceb18ad84dfdf9&plugin=AMap.ControlBar"></script>
-    <script src="http://webapi.amap.com/loca?key=8845df0c0040e4aa27ceb18ad84dfdf9"></script>
-    <script src="http://a.amap.com/jsapi_demos/static/citys.js"></script>
+    <script language="javascript" src="//webapi.amap.com/maps?v=1.4.9&key=8845df0c0040e4aa27ceb18ad84dfdf9&plugin=AMap.ControlBar"></script>
+    <script src="//webapi.amap.com/loca?key=8845df0c0040e4aa27ceb18ad84dfdf9"></script>
+    <script src="//a.amap.com/jsapi_demos/static/citys.js"></script>
 </head>
 
 <body>
