--- a/3Dmap.html
+++ b/3Dmap.html
@@ -6,9 +6,16 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>3D地图</title>
     <link href="./css/3Dmap.css" rel="stylesheet" />
-    <script language="javascript" src="http://webapi.amap.com/maps?v=1.4.9&key=8845df0c0040e4aa27ceb18ad84dfdf9&plugin=AMap.ControlBar"></script>
+    <script language="javascript" src="http://webapi.amap.com/maps?v=1.4.10&key=8845df0c0040e4aa27ceb18ad84dfdf9&plugin=Map3D,AMap.DistrictLayer,AMap.ControlBar"></script>
     <script src="http://webapi.amap.com/loca?key=8845df0c0040e4aa27ceb18ad84dfdf9"></script>
     <script src="http://a.amap.com/jsapi_demos/static/citys.js"></script>
+    <style>
+        #clayer{
+            width:100%;
+            height: 100%;
+            background: url(img/bg1.png) /*radial-gradient(rgba(255,255,255,.3), rgba(0,50,90,.6), rgba(0,0,0,.8));*/
+        }
+    </style>
 </head>
 
 <body>
