--- a/3Dmap.html
+++ b/3Dmap.html
@@ -10,7 +10,12 @@
 
     <script language="javascript" src="http://webapi.amap.com/maps?v=1.4.10&key=8845df0c0040e4aa27ceb18ad84dfdf9&plugin=Map3D,AMap.DistrictLayer,AMap.ControlBar"></script>
     <script src="http://webapi.amap.com/loca?key=8845df0c0040e4aa27ceb18ad84dfdf9"></script>
+    <script type="text/javascript" src="https://cache.amap.com/lbs/static/addToolbar.js"></script>
     <script src="http://a.amap.com/jsapi_demos/static/citys.js"></script>
+    <script src="//a.amap.com/Loca/static/mock/bj_heat_grid.js"></script>
+    <script src="./js/step2/step2.js"></script>
+    <script src="/js/step2/data.js"></script>
+    <script src="/js/step2/data2.js"></script>
     <script src="js/tween.min.js"></script>
     <style>
         #bglayer{
@@ -21,6 +26,7 @@
         #clayer{
             width:100%;
             height: 100%;
+            /* background: url("img/bg1.png"); */
 
 
         }
