first page change

--- a/3Dmap.html
+++ b/3Dmap.html
@@ -9,7 +9,7 @@
 
 
     <script language="javascript"
-            src="http://webapi.amap.com/maps?v=1.4.10&key=8845df0c0040e4aa27ceb18ad84dfdf9&plugin=Map3D,AMap.DistrictLayer,AMap.ControlBar"></script>
+            src="http://webapi.amap.com/maps?v=1.4.10&key=8845df0c0040e4aa27ceb18ad84dfdf9&plugin=Map3D,AMap.DistrictLayer,AMap.ControlBar,AMap.DistrictSearch"></script>
     <script src="http://webapi.amap.com/loca?key=8845df0c0040e4aa27ceb18ad84dfdf9"></script>
     <script type="text/javascript" src="https://cache.amap.com/lbs/static/addToolbar.js"></script>
     <script src="http://a.amap.com/jsapi_demos/static/citys.js"></script>
@@ -31,7 +31,7 @@
 
 <body>
 <div class="header">
-    <div class="title">空间信息可视化交互平台
+    <div class="title">互联网金融动态监测可视化平台
         <div class="title-after">
             <div class="title-after-img"></div>
             <div class="title-after-inimg"></div>
@@ -69,8 +69,8 @@
     </div>
 </div>
 
-<div class="con-panel left-panel"></div>
-<div class="con-panel right-panel"></div>
+<!--<div class="con-panel left-panel"></div>
+<div class="con-panel right-panel"></div>-->
 
 <div class="con-statis">
     <div class="base-info">
@@ -94,6 +94,7 @@
 <script src="js/polygonizr.min.js"></script>
 <script src="./js/util.js" type="text/javascript"></script>
 <script src="./js/baseChart.js" type="text/javascript"></script>
+<script src="./js/mask.js" type="text/javascript"></script>
 <script src="./js/3Dmap.js" type="text/javascript"></script>
 <script src="./js/numberAnimate.js" type="text/javascript"></script>
 </body>
