--- a/3Dmap.html
+++ b/3Dmap.html
@@ -94,7 +94,7 @@
 <script src="js/polygonizr.min.js"></script>
 <script src="./js/util.js" type="text/javascript"></script>
 <script src="./js/baseChart.js" type="text/javascript"></script>
-<script src="./js/mask.js" type="text/javascript"></script>
+<script src="./js/mask2.js" type="text/javascript"></script>
 <script src="./js/3Dmap.js" type="text/javascript"></script>
 <script src="./js/numberAnimate.js" type="text/javascript"></script>
 </body>
