--- a/3Dmap.html
+++ b/3Dmap.html
@@ -16,6 +16,7 @@
     <script src="//a.amap.com/Loca/static/mock/bj_heat_grid.js"></script>
     <script src="./js/step1/step1.js"></script>
     <script src="./js/step2/step2.js"></script>
+    <script src="./js/step3/step3.js"></script>
     <script src="./js/step2/data.js"></script>
     <script src="./js/step2/data2.js"></script>
     <script src="./js/tween.min.js"></script>
