--- a/3Dmap.html
+++ b/3Dmap.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>3D地图</title>
     <link href="./css/3Dmap.css" rel="stylesheet"/>
-
+    <link href="./css/word.css" rel="stylesheet"/>
 
     <script language="javascript"
             src="http://webapi.amap.com/maps?v=1.4.10&key=8845df0c0040e4aa27ceb18ad84dfdf9&plugin=Map3D,AMap.DistrictLayer,AMap.ControlBar,AMap.DistrictSearch"></script>
@@ -91,6 +91,13 @@
     </div>
 </div>
 
+<div class="word-container">
+    <div class="word w1"><span>010</span><span>110</span><span>1011</span><span>110</span><span>000</span><span>0100</span><span>1101</span><span>1011</span><span>111</span><span>100</span><span>001</span><span>0010</span><span>111</span></div>
+    <div class="word w2"><span>010</span><span>110</span><span>11101</span><span>110</span><span>000</span><span>0110</span><span>111</span><span>1001</span><span>1110</span><span>100</span><span>001</span><span>0000</span><span>111</span></div>
+    <div class="word w3"><span>010010010</span><span>110</span><span>010010010</span><span>110</span><span>101</span><span>110010010</span><span>000</span><span>010010010</span><span>111</span><span>101010</span><span>111010010</span><span>101100</span><span>1101</span><span>1010</span><span>001010</span></div>
+    <div class="word w4"><span>0111110</span><span>110000</span><span>101</span><span>11111101110</span><span>01100</span><span>0111010</span><span>1111</span><span>101</span><span>111</span><span>100</span><span>001</span><span>001100</span><span>111</span><span>011100</span><span>1111111111</span></div>
+    <div class="word w6"><span>01011</span><span>1101</span><span>101</span><span>110</span><span>00011</span><span>010</span><span>11001</span><span>101</span><span>11001</span><span>100</span><span>0001</span><span>00110</span><span>11111</span></div>
+</div>
 <script src="./js/echarts.min.js" type="text/javascript"></script>
 <script src="js/jquery.min.js"></script>
 <script src="js/polygonizr.min.js"></script>
