--- a/3Dmap.html
+++ b/3Dmap.html
@@ -5,11 +5,10 @@
     <meta name="viewport" content="width=device-width initial-scale=1.0 maximum-scale=1.0 user-scalable=0">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>3D地图</title>
-    <link href="./css/3Dmap.css" rel="stylesheet"/>
-    <link href="./css/word.css" rel="stylesheet"/>
-
-    <script language="javascript"
-            src="http://webapi.amap.com/maps?v=1.4.10&key=8845df0c0040e4aa27ceb18ad84dfdf9&plugin=Map3D,AMap.DistrictLayer,AMap.ControlBar,AMap.DistrictSearch"></script>
+    <link href="./css/3Dmap.css" rel="stylesheet" />
+    <link href="./css/word.css" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" rel="stylesheet">
+    <script language="javascript" src="http://webapi.amap.com/maps?v=1.4.10&key=8845df0c0040e4aa27ceb18ad84dfdf9&plugin=Map3D,AMap.DistrictLayer,AMap.ControlBar,AMap.DistrictSearch"></script>
     <script src="http://webapi.amap.com/loca?key=8845df0c0040e4aa27ceb18ad84dfdf9"></script>
     <script type="text/javascript" src="https://cache.amap.com/lbs/static/addToolbar.js"></script>
     <script src="http://a.amap.com/jsapi_demos/static/citys.js"></script>
@@ -32,32 +31,33 @@
 </head>
 
 <body>
-<div class="header">
-    <div class="title">互联网金融动态监测可视化平台
-        <div class="title-after">
-            <div class="title-after-img"></div>
-            <div class="title-after-inimg"></div>
-            <div class="title-after-pimg"></div>
+    <div class="header">
+        <div class="title">互联网金融动态监测可视化平台
+            <div class="title-after">
+                <div class="title-after-img"></div>
+                <div class="title-after-inimg"></div>
+                <div class="title-after-pimg"></div>
+            </div>
         </div>
+        <ul class="nav">
+            <li>
+                <a class="menu-step1" href="#step=1">全国</a>
+            </li>
+            <li>
+                <a class="menu-step2" href="#step=2">北京地区</a>
+            </li>
+            <li>
+                <a class="menu-step3" href="#step=3">朝阳地区</a>
+            </li>
+            <li>
+                <a href="#">信息统计</a>
+            </li>
+        </ul>
     </div>
-    <ul class="nav">
-        <li>
-            <a class="active" href="#step=1">全国</a>
-        </li>
-        <li>
-            <a href="#step=2">北京地区</a>
-        </li>
-        <li>
-            <a href="#step=3">朝阳地区</a>
-        </li>
-        <li>
-            <a href="#">信息统计</a>
-        </li>
-    </ul>
-</div>
-<div id="container" style="width:100%; height:100%;resize:both;"></div>
-<div class="echart-con">
-    <div class="item" id="lineWarp">
+    <div id="container" style="width:100%; height:100%;resize:both;"></div>
+    <div class="echart-con">
+        <!--echarts图表-->
+        <!-- <div class="item" id="lineWarp">
         <div id="line" class="chart"></div>
     </div>
     <div class="item" id="hbarWarp">
@@ -68,44 +68,63 @@
     </div>
     <div class="item" id="vbarWarp">
         <div id="vbar" class="chart"></div>
+    </div> -->
+        <div class="itemdemo">
+            <img src="img/step3_chart1.png">
+        </div>
+        <div class="itemdemo">
+            <img src="img/step3_chart2.png">
+        </div>
+        <div class="itemdemo">
+            <img src="img/step3_chart3.png">
+        </div>
+        <div class="itemdemo">
+            <img src="img/step3_chart4.png">
+        </div>
+        <div class="itemdemo">
+            <img src="img/step3_chart5.png">
+        </div>
     </div>
-</div>
 
-<!--<div class="con-panel left-panel"></div>
+    <!--<div class="con-panel left-panel"></div>
 <div class="con-panel right-panel"></div>-->
 
-<div class="con-statis">
-    <div class="base-info">
-        <label class="name">全国范围</label>
-        <label class="time">0000-00-00     00:00</label>
+    <div class="con-statis">
+        <div class="base-info">
+            <label class="name"></label>
+            <label class="time">0000-00-00 00:00</label>
+        </div>
+        <div class="turnover">
+            <label class="lbl-name">累计成交量</label>
+            <img src="./img/light9.png" />
+            <div class="numberRun1"></div>
+        </div>
+        <div class="nums">
+            <label class="lbl-name">平台数量</label>
+            <div class="numberRun2"></div>
+            <img src="./img/light8.png" />
+        </div>
+        <div class="overview">
+            <iframe class="map" src="overview.html" frameborder="0"></iframe>
+        </div>
     </div>
-    <div class="turnover">
-        <label class="lbl-name">累计成交量</label>
-        <img src="./img/light9.png" />
-        <div class="numberRun1"></div>
-    </div>
-    <div class="nums">
-        <label class="lbl-name">平台数量</label>
-        <div class="numberRun2"></div>
-        <img src="./img/light8.png" />
-    </div>
-</div>
+    <div class="step3-mask"></div>
 
-<div class="word-container">
-    <div class="word w1"><span>010</span><span>110</span><span>1011</span><span>110</span><span>000</span><span>0100</span><span>1101</span><span>1011</span><span>111</span><span>100</span><span>001</span><span>0010</span><span>111</span></div>
-    <div class="word w2"><span>010</span><span>110</span><span>11101</span><span>110</span><span>000</span><span>0110</span><span>111</span><span>1001</span><span>1110</span><span>100</span><span>001</span><span>0000</span><span>111</span></div>
-    <div class="word w3"><span>010010010</span><span>110</span><span>010010010</span><span>110</span><span>101</span><span>110010010</span><span>000</span><span>010010010</span><span>111</span><span>101010</span><span>111010010</span><span>101100</span><span>1101</span><span>1010</span><span>001010</span></div>
-    <div class="word w4"><span>0111110</span><span>110000</span><span>101</span><span>11111101110</span><span>01100</span><span>0111010</span><span>1111</span><span>101</span><span>111</span><span>100</span><span>001</span><span>001100</span><span>111</span><span>011100</span><span>1111111111</span></div>
-    <div class="word w6"><span>01011</span><span>1101</span><span>101</span><span>110</span><span>00011</span><span>010</span><span>11001</span><span>101</span><span>11001</span><span>100</span><span>0001</span><span>00110</span><span>11111</span></div>
-</div>
-<script src="./js/echarts.min.js" type="text/javascript"></script>
-<script src="js/jquery.min.js"></script>
-<script src="js/polygonizr.min.js"></script>
-<script src="./js/util.js" type="text/javascript"></script>
-<script src="./js/baseChart.js" type="text/javascript"></script>
-<script src="./js/mask2.js" type="text/javascript"></script>
-<script src="./js/3Dmap.js" type="text/javascript"></script>
-<script src="./js/numberAnimate.js" type="text/javascript"></script>
+    <div class="word-container">
+        <div class="word w1"><span>010</span><span>110</span><span>1011</span><span>110</span><span>000</span><span>0100</span><span>1101</span><span>1011</span><span>111</span><span>100</span><span>001</span><span>0010</span><span>111</span></div>
+        <div class="word w2"><span>010</span><span>110</span><span>11101</span><span>110</span><span>000</span><span>0110</span><span>111</span><span>1001</span><span>1110</span><span>100</span><span>001</span><span>0000</span><span>111</span></div>
+        <div class="word w3"><span>010010010</span><span>110</span><span>010010010</span><span>110</span><span>101</span><span>110010010</span><span>000</span><span>010010010</span><span>111</span><span>101010</span><span>111010010</span><span>101100</span><span>1101</span><span>1010</span><span>001010</span></div>
+        <div class="word w4"><span>0111110</span><span>110000</span><span>101</span><span>11111101110</span><span>01100</span><span>0111010</span><span>1111</span><span>101</span><span>111</span><span>100</span><span>001</span><span>001100</span><span>111</span><span>011100</span><span>1111111111</span></div>
+        <div class="word w6"><span>01011</span><span>1101</span><span>101</span><span>110</span><span>00011</span><span>010</span><span>11001</span><span>101</span><span>11001</span><span>100</span><span>0001</span><span>00110</span><span>11111</span></div>
+    </div>
+    <script src="./js/echarts.min.js" type="text/javascript"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/polygonizr.min.js"></script>
+    <script src="./js/util.js" type="text/javascript"></script>
+    <script src="./js/baseChart.js" type="text/javascript"></script>
+    <script src="./js/mask2.js" type="text/javascript"></script>
+    <script src="./js/3Dmap.js" type="text/javascript"></script>
+    <script src="./js/numberAnimate.js" type="text/javascript"></script>
 </body>
 
 </html>
