中间旋转动画 -9个图层

--- a/3Dmap.html
+++ b/3Dmap.html
@@ -54,6 +54,17 @@
             </li>
         </ul>
     </div>
+    <div class="ring">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
+        <div>5</div>
+        <div>6</div>
+        <div>7</div>
+        <div>8</div>
+        <div>9</div>
+    </div>
     <div id="container" style="width:100%; height:100%;resize:both;"></div>
     <div class="echart-con">
         <!--echarts图表-->
