--- a/3Dmap.html
+++ b/3Dmap.html
@@ -136,6 +136,8 @@
     <script src="./js/mask2.js" type="text/javascript"></script>
     <script src="./js/3Dmap.js" type="text/javascript"></script>
     <script src="./js/numberAnimate.js" type="text/javascript"></script>
+    <script src="./js/autopaly.js"></script>
+
 </body>
 
 </html>
