--- a/3Dmap.html
+++ b/3Dmap.html
@@ -20,14 +20,11 @@
     <script src="./js/step2/data2.js"></script>
     <script src="./js/tween.min.js"></script>
     <style>
-        #clayer {
+        #clayer,#particles {
             width: 100%;
-            height: 100%;
-
+            height: 40%;
         }
     </style>
-
-
 </head>
 
 <body>
@@ -51,6 +48,8 @@
             </li>
             <li>
                 <a href="#">信息统计</a>
+            </li>
+            <li class="op-btn start" title="播放动画" onclick="playAnimation(this)">
             </li>
         </ul>
     </div>
@@ -130,10 +129,10 @@
     </div>
     <script src="./js/echarts.min.js" type="text/javascript"></script>
     <script src="js/jquery.min.js"></script>
-    <script src="js/polygonizr.min.js"></script>
     <script src="./js/util.js" type="text/javascript"></script>
     <script src="./js/baseChart.js" type="text/javascript"></script>
     <script src="./js/mask2.js" type="text/javascript"></script>
+    <script src="./js/step3/particles.min.js"></script>
     <script src="./js/3Dmap.js" type="text/javascript"></script>
     <script src="./js/numberAnimate.js" type="text/javascript"></script>
 </body>
