--- a/3Dmap.html
+++ b/3Dmap.html
@@ -65,6 +65,9 @@
         <div>9</div>
     </div>
     <div id="container" style="width:100%; height:100%;resize:both;"></div>
+    <div class="echart-lcon">
+        <div><img src="./img/step3-chart6.png" /></div>
+    </div>
     <div class="echart-con">
         <!--echarts图表-->
         <!-- <div class="item" id="lineWarp">
