--- a/3Dmap.html
+++ b/3Dmap.html
@@ -47,7 +47,7 @@
                 <a class="menu-step3" href="#step=3">朝阳地区</a>
             </li>
             <li>
-                <a href="#">信息统计</a>
+                <a class="menu-step4" href="#step=4">信息统计</a>
             </li>
             <li class="op-btn start" title="播放动画" onclick="playAnimation(this)">
             </li>
@@ -70,19 +70,22 @@
     </div>
     <div class="echart-con">
         <!--echarts图表-->
-        <!-- <div class="item" id="lineWarp">
-        <div id="line" class="chart"></div>
-    </div>
-    <div class="item" id="hbarWarp">
-        <div id="hbar" class="chart"></div>
-    </div>
-    <div class="item" id="baseLineWarp">
-        <div id="baseLine" class="chart"></div>
-    </div>
-    <div class="item" id="vbarWarp">
-        <div id="vbar" class="chart"></div>
-    </div> -->
-        <div class="itemdemo">
+         <div class="item">
+            <div id="line1" class="chart"></div>
+        </div>
+        <div class="item">
+                <div id="line2" class="chart"></div>
+            </div>
+        <div class="item">
+            <div id="radar" class="chart"></div>
+        </div>
+        <div class="item">
+            <div id="line3" class="chart"></div>
+        </div>
+        <div class="item">
+            <div id="line4" class="chart"></div>
+        </div>
+       <!-- <div class="itemdemo">
             <img src="img/step3_chart1.png">
         </div>
         <div class="itemdemo">
@@ -96,7 +99,7 @@
         </div>
         <div class="itemdemo">
             <img src="img/step3_chart5.png">
-        </div>
+        </div>-->
     </div>
 
     <!--<div class="con-panel left-panel"></div>
@@ -134,7 +137,7 @@
     <script src="js/jquery.min.js"></script>
     <script src="./js/util.js" type="text/javascript"></script>
     <script src="./js/baseChart.js" type="text/javascript"></script>
-    <script src="./js/mask2.js" type="text/javascript"></script>
+    <script src="./js/polygonizr.min.js" type="text/javascript"></script>
     <script src="./js/step3/particles.min.js"></script>
     <script src="./js/3Dmap.js" type="text/javascript"></script>
     <script src="./js/numberAnimate.js" type="text/javascript"></script>
