--- a/3Dmap.html
+++ b/3Dmap.html
@@ -77,29 +77,14 @@
                 <div id="line2" class="chart"></div>
             </div>
         <div class="item">
-            <div id="radar" class="chart"></div>
+            <div id="bar1" class="chart"></div>
         </div>
         <div class="item">
             <div id="line3" class="chart"></div>
         </div>
         <div class="item">
-            <div id="line4" class="chart"></div>
+            <div id="bar2" class="chart"></div>
         </div>
-       <!-- <div class="itemdemo">
-            <img src="img/step3_chart1.png">
-        </div>
-        <div class="itemdemo">
-            <img src="img/step3_chart2.png">
-        </div>
-        <div class="itemdemo">
-            <img src="img/step3_chart3.png">
-        </div>
-        <div class="itemdemo">
-            <img src="img/step3_chart4.png">
-        </div>
-        <div class="itemdemo">
-            <img src="img/step3_chart5.png">
-        </div>-->
     </div>
 
     <!--<div class="con-panel left-panel"></div>
