--- a/3Dmap.html
+++ b/3Dmap.html
@@ -130,6 +130,7 @@
         <div class="word w4"><span>0111110</span><span>110000</span><span>101</span><span>11111101110</span><span>01100</span><span>0111010</span><span>1111</span><span>101</span><span>111</span><span>100</span><span>001</span><span>001100</span><span>111</span><span>011100</span><span>1111111111</span></div>
         <div class="word w6"><span>01011</span><span>1101</span><span>101</span><span>110</span><span>00011</span><span>010</span><span>11001</span><span>101</span><span>11001</span><span>100</span><span>0001</span><span>00110</span><span>11111</span></div>
     </div>
+    <script src="./js/step3/step3.tips.js"></script>
     <script src="./js/echarts.min.js" type="text/javascript"></script>
     <script src="js/jquery.min.js"></script>
     <script src="./js/util.js" type="text/javascript"></script>
