--- a/3Dmap.html
+++ b/3Dmap.html
@@ -66,20 +66,20 @@
     </div>
     <div id="container" style="width:100%; height:100%;resize:both;"></div>
     <div class="echart-lcon">
-        <div class="item">
-            <div class="num">1</div><div class="pie" id="lpie1"></div><div class="line"><div  id="lline1"></div></div>
+        <div class="item" title="北京东方联合投资管理有限公司">
+            <div class="num" onclick="mapPanto(0)">1</div><div class="pie" id="lpie1"></div><div class="line"><div  id="lline1"></div></div>
         </div>
-        <div class="item">
-            <div class="num">2</div><div class="pie" id="lpie2"></div><div class="line"><div  id="lline2"></div></div>
+        <div class="item" title="北京瓴岳信息技术有限公司">
+            <div class="num"  onclick="mapPanto(1)">2</div><div class="pie" id="lpie2"></div><div class="line"><div  id="lline2"></div></div>
         </div>
-        <div class="item">
-            <div class="num">3</div><div class="pie" id="lpie3"></div><div class="line"><div  id="lline3"></div></div>
+        <div class="item" title="北京乐融多源信息技术有限公司">
+            <div class="num" onclick="mapPanto(2)">3</div><div class="pie" id="lpie3"></div><div class="line"><div  id="lline3"></div></div>
         </div>
-        <div class="item">
-            <div class="num">4</div><div class="pie" id="lpie4"></div><div class="line"><div  id="lline4"></div></div>
+        <div class="item" title="贝壳金科控股有限公司">
+            <div class="num" onclick="mapPanto(3)">4</div><div class="pie" id="lpie4"></div><div class="line"><div  id="lline4"></div></div>
         </div>
-        <div class="item">
-            <div class="num">5</div><div class="pie" id="lpie5"></div><div class="line"><div  id="lline5"></div></div>
+        <div class="item" title="北京钱得乐科技有限公司">
+            <div class="num" onclick="mapPanto(4)">5</div><div class="pie" id="lpie5"></div><div class="line"><div  id="lline5"></div></div>
         </div>
     </div>
     <div class="echart-con">
