--- a/3Dmap.html
+++ b/3Dmap.html
@@ -19,6 +19,7 @@
     <script src="./js/step2/data2.js"></script>
     <script src="./js/step3/data3.js"></script>
     <script src="./js/tween.min.js"></script>
+    <script src="https://a.amap.com/Loca/static/mock/adcodes.js"></script>
     <style>
         #clayer,#particles {
             width: 100%;
@@ -63,7 +64,8 @@
         <div>8</div>
         <div>9</div>
     </div>
-    <div id="container" style="width:100%; height:100%;resize:both;"></div>
+    <div id="container" class="loaded" style="width:100%; height:100%;resize:both;position: fixed;"></div>
+    <div id="container2" style="width:100%; height:100%;resize:both;position: fixed;"></div>
     <div class="echart-lcon">
         <div class="item" title="北京东方联合投资管理有限公司">
             <div class="num" onclick="mapPanto(0)">1</div><div class="pie" id="lpie1"></div><div class="line"><div  id="lline1"></div></div>
