--- a/3Dmap.html
+++ b/3Dmap.html
@@ -64,6 +64,7 @@
         <div>8</div>
         <div>9</div>
     </div>
+    <div id="login" class='loaded'></div>
     <div id="container" class="loaded" style="width:100%; height:100%;resize:both;position: fixed;z-index: 3;"></div>
     <div id="container2" style="width:100%; height:100%;resize:both;position: fixed; z-index: 2;"></div>
     <div class="echart-lcon">
