--- a/3Dmap.html
+++ b/3Dmap.html
@@ -64,8 +64,8 @@
         <div>8</div>
         <div>9</div>
     </div>
-    <div id="container" class="loaded" style="width:100%; height:100%;resize:both;position: fixed;z-index: 3;"></div>
-    <div id="container2" style="width:100%; height:100%;resize:both;position: fixed; z-index: 2;"></div>
+    <div id="container" style="width:100%; height:100%;resize:both;position: fixed;"></div>
+    <div id="container2" class="loaded" style="width:100%; height:100%;resize:both;position: fixed;"></div>
     <div class="echart-lcon">
         <div class="item" title="北京东方联合投资管理有限公司">
             <div class="num" onclick="mapPanto(0)">1</div><div class="pie" id="lpie1"></div><div class="line"><div  id="lline1"></div></div>
