--- a/3Dmap.html
+++ b/3Dmap.html
@@ -64,7 +64,15 @@
         <div>8</div>
         <div>9</div>
     </div>
-    <div id="login" class='loaded'></div>
+    <div id="login" class='login loaded'>
+        <div class="login-ctx">
+            <h3>登录</h3>
+            <div><input id='txt-name' class='txt-name'></div>
+            <div><input id='txt-pwd'  class='txt-pwd' type='password'></div>
+            <div id="btn-login" class='btn-login'>登录</div>
+        </div>
+        
+    </div>
     <div id="container" class="loaded" style="width:100%; height:100%;resize:both;position: fixed;z-index: 3;"></div>
     <div id="container2" style="width:100%; height:100%;resize:both;position: fixed; z-index: 2;"></div>
     <div class="echart-lcon">
