--- a/3Dmap.html
+++ b/3Dmap.html
@@ -7,9 +7,11 @@
     <title>3D地图</title>
     <link href="./css/3Dmap.css" rel="stylesheet" />
     <link href="./css/word.css" rel="stylesheet" />
+    <link rel="stylesheet" href="./css/iconfont.css" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" rel="stylesheet">
     <script language="javascript" src="http://webapi.amap.com/maps?v=1.4.10&key=8845df0c0040e4aa27ceb18ad84dfdf9&plugin=Map3D,AMap.DistrictLayer,AMap.ControlBar,AMap.DistrictSearch"></script>
     <script src="http://webapi.amap.com/loca?key=8845df0c0040e4aa27ceb18ad84dfdf9"></script>
+   
     <script type="text/javascript" src="https://cache.amap.com/lbs/static/addToolbar.js"></script>
     <script src="//a.amap.com/Loca/static/mock/bj_heat_grid.js"></script>
     <script src="./js/step1/data.js"></script>
@@ -62,24 +64,21 @@
         <div>8</div>
         <div>9</div>
     </div>
-<<<<<<< HEAD
     <div id="login" class='login loaded'>
+        <div id="anitOut" style="height:1400px"></div>
         <div class="login-ctx">
-            <h3>登录</h3>
-            <div><input id='txt-name' class='txt-name'></div>
-            <div><input id='txt-pwd'  class='txt-pwd' type='password'></div>
-            <div id="btn-login" class='btn-login'>登录</div>
+            <div class="login-title">Welcome</div>
+            <div class="form">
+            <div class="itemrow"><i class="iconfont icon-user2"></i><input id='txt-name' class='txt txt-name'></div>
+            <div class="itemrow"><i class="iconfont icon-3702mima"></i><input id='txt-pwd'  class='txt txt-pwd' type='password'></div>
+            <div id="btn-login" class='btn-login'>LOGIN</div>
+            </div>
         </div>
         
     </div>
     <div id="container" class="loaded" style="width:100%; height:100%;resize:both;position: fixed;z-index: 3;"></div>
     <div id="container2" style="width:100%; height:100%;resize:both;position: fixed; z-index: 2;"></div>
     <div class="echart-lcon">
-=======
-    <div id="container" style="width:100%; height:100%;resize:both;position: fixed;"></div>
-    <div id="container2" class="loaded" style="width:100%; height:100%;resize:both;position: fixed;"></div>
-     <div class="echart-lcon">
->>>>>>> e1f5c1ea1e1c855d3a79f048bdcbbf98e0915ed2
         <div class="item" title="北京东方联合投资管理有限公司">
             <div class="num" onclick="mapPanto(0)">1</div><div class="pie" id="lpie1"></div><div class="line"><div  id="lline1"></div></div>
         </div>
@@ -146,6 +145,7 @@
         <div class="word w4"><span>0111110</span><span>110000</span><span>101</span><span>11111101110</span><span>01100</span><span>0111010</span><span>1111</span><span>101</span><span>111</span><span>100</span><span>001</span><span>001100</span><span>111</span><span>011100</span><span>1111111111</span></div>
         <div class="word w6"><span>01011</span><span>1101</span><span>101</span><span>110</span><span>00011</span><span>010</span><span>11001</span><span>101</span><span>11001</span><span>100</span><span>0001</span><span>00110</span><span>11111</span></div>
     </div>
+    <script src='./js/loginbg.js'></script>
     <script src="./js/step3/step3.tips.js"></script>
     <script src="./js/echarts.min.js" type="text/javascript"></script>
     <script src="js/jquery.min.js"></script>
@@ -157,7 +157,7 @@
     <script src="./js/numberAnimate.js" type="text/javascript"></script>
     <script src="./js/autopaly.js"></script>
     <script src="./js/zrender.js"></script>
-
+    <script src="./js/step0/index.js"></script>
     <script src="./js/step1/index.js"></script>
     <script src="./js/step2/index.js"></script>
     <script src="./js/step3/index.js"></script>
