--- a/3Dmap.html
+++ b/3Dmap.html
@@ -94,6 +94,9 @@
         <div class="item" title="北京钱得乐科技有限公司">
             <div class="num" onclick="mapPanto(4)">5</div><div class="pie" id="lpie5"></div><div class="line"><div  id="lline5"></div></div>
         </div>
+        <div class="item" title="北京玖富普惠信息技术有限公司">
+                <div class="num" onclick="mapPanto(5)">6</div><div class="pie" id="lpie6"></div><div class="line"><div  id="lline6"></div></div>
+        </div>
     </div>
     <div class="echart-con">
         <!--echarts图表-->
