--- a/3Dmap.html
+++ b/3Dmap.html
@@ -14,6 +14,7 @@
    
     <script type="text/javascript" src="https://cache.amap.com/lbs/static/addToolbar.js"></script>
     <script src="//a.amap.com/Loca/static/mock/bj_heat_grid.js"></script>
+    <script src="//a.amap.com/jsapi_demos/static/citys.js"></script>
     <script src="./js/step1/data.js"></script>
     <script src="./js/step2/data.js"></script>
     <script src="./js/step2/data2.js"></script>
