--- a/3Dmap.html
+++ b/3Dmap.html
@@ -125,6 +125,7 @@
         <div class="base-info">
             <label class="name"></label>
             <label class="time">0000-00-00 00:00</label>
+            <label class="weather"><i id="iconWeather" class="iconfont icon-fine_icon"></i>/<span title="当前温度" id="temperature">15</span>℃</label>
         </div>
         <div class="turnover">
             <label class="lbl-name">累计成交量</label>
