--- a/3Dmap.html
+++ b/3Dmap.html
@@ -65,7 +65,7 @@
         <div>8</div>
         <div>9</div>
     </div>
-    <div id="login" class='login'>
+    <div id="login" class='login loaded'>
         <div id="anitOut" style="height:1400px"></div>
         <div class="login-ctx">
             <div class="login-title">Welcome</div>
@@ -77,7 +77,7 @@
         </div>
         
     </div>
-    <div id="container" class="loaded" style="width:100%; height:100%;resize:both;position: fixed;z-index: 3;"></div>
+    <div id="container"  style="width:100%; height:100%;resize:both;position: fixed;z-index: 3;"></div>
     <div id="container2" style="width:100%; height:100%;resize:both;position: fixed; z-index: 2;"></div>
     <div class="echart-lcon">
         <div class="item" title="北京东方联合投资管理有限公司">
