--- a/3Dmap.html
+++ b/3Dmap.html
@@ -137,7 +137,7 @@
         <iframe class="map" src="overview.html" frameborder="0"></iframe>
     </div>
 
-    <div class="word-container">
+    <div class="word-container" style="display: none;">
         <div class="word w1"><span>010</span><span>110</span><span>1011</span><span>110</span><span>000</span><span>0100</span><span>1101</span><span>1011</span><span>111</span><span>100</span><span>001</span><span>0010</span><span>111</span></div>
         <div class="word w2"><span>010</span><span>110</span><span>11101</span><span>110</span><span>000</span><span>0110</span><span>111</span><span>1001</span><span>1110</span><span>100</span><span>001</span><span>0000</span><span>111</span></div>
         <div class="word w3"><span>010010010</span><span>110</span><span>010010010</span><span>110</span><span>101</span><span>110010010</span><span>000</span><span>010010010</span><span>111</span><span>101010</span><span>111010010</span><span>101100</span><span>1101</span><span>1010</span><span>001010</span></div>
