--- a/3Dmap.html
+++ b/3Dmap.html
@@ -25,7 +25,8 @@
 
 <body>
     <div class="header">
-        <div class="title">互联网金融动态监测可视化平台
+        <div class="title">
+            <img src='./img/page-title2.png' />
             <div class="title-after">
                 <div class="title-after-img"></div>
                 <div class="title-after-inimg"></div>
@@ -73,7 +74,7 @@
     </div>
     <div id="container"  style="width:100%; height:100%;resize:both;position: fixed;z-index: 3;"></div>
     <div id="container2" style="width:100%; height:100%;resize:both;position: fixed; z-index: 2;"></div>
-    <div class="echart-lcon">
+    <div class="echart-lcon" style="display:none;">
         <div class="item" title="北京东方联合投资管理有限公司">
             <div class="num" onclick="mapPanto(0)">1</div><div class="pie" id="lpie1"></div><div class="line"><div  id="lline1"></div></div>
         </div>
@@ -93,7 +94,7 @@
                 <div class="num" onclick="mapPanto(5)">6</div><div class="pie" id="lpie6"></div><div class="line"><div  id="lline6"></div></div>
         </div>
     </div>
-    <div class="echart-con">
+    <div class="echart-con" style="display:none;">
         <!--echarts图表-->
          <div class="item">
             <div id="line1" class="chart"></div>
@@ -112,8 +113,9 @@
         </div>
     </div>
 
-    <!--<div class="con-panel left-panel"></div>
-<div class="con-panel right-panel"></div>-->
+    <div class="top-panel"></div>
+    <div class="con-panel left-panel"></div>
+    <div class="con-panel right-panel"></div>
 
     <div class="con-statis">
         <div class="base-info">
@@ -133,10 +135,18 @@
         </div>
     </div>
     <div class="step3-mask"></div>
-    <div class="overview">
+    <div class="overview" style="display: none;">
         <iframe class="map" src="overview.html" frameborder="0"></iframe>
     </div>
-
+    <div class="temp-box temp-box1">
+        <img src="./img/temp-box1.png" />
+    </div>
+    <div class="temp-box temp-box2">
+        <img src="./img/temp-box4.png" />
+    </div>
+    <div class="temp-box temp-box3">
+        <img src="./img/temp-box3.png" />
+    </div>
     <div class="word-container" style="display: none;">
         <div class="word w1"><span>010</span><span>110</span><span>1011</span><span>110</span><span>000</span><span>0100</span><span>1101</span><span>1011</span><span>111</span><span>100</span><span>001</span><span>0010</span><span>111</span></div>
         <div class="word w2"><span>010</span><span>110</span><span>11101</span><span>110</span><span>000</span><span>0110</span><span>111</span><span>1001</span><span>1110</span><span>100</span><span>001</span><span>0000</span><span>111</span></div>
