--- a/3Dmap.html
+++ b/3Dmap.html
@@ -73,7 +73,6 @@
             <div id="btn-login" class='btn-login'>LOGIN</div>
             </div>
         </div>
-        
     </div>
     <div id="container"  style="width:100%; height:100%;resize:both;position: fixed;z-index: 3;"></div>
     <div id="container2" style="width:100%; height:100%;resize:both;position: fixed; z-index: 2;"></div>
@@ -145,7 +144,11 @@
         <img src="./img/temp-box1.png" />
     </div>
     <div class="temp-box temp-box2">
-        <img src="./img/temp-box4.png" />
+        <div class="bg-box"></div>
+        <div class="bg-box"></div>
+        <div class="bg-box"></div>
+        <div class="bg-box"></div>
+        <div class="bg-box"></div>
     </div>
     <div class="temp-box temp-box3">
         <img src="./img/temp-box3.png" />
