--- a/overview.html
+++ b/overview.html
@@ -54,7 +54,8 @@
 
         map = new AMap.Map('container', {
             mapStyle: 'amap://styles/400f3cca392175a5df9c9d6ecba447d7',
-            zoom: 11
+            zoom: 11,
+            center:[116.405467, 39.907761]
         });
         var marker = new AMap.Marker({
             icon: "./img/step3_overview_sel.png",
