--- a/3Dmap.html
+++ b/3Dmap.html
@@ -9,8 +9,8 @@
     <link href="./css/word.css" rel="stylesheet" />
     <link rel="stylesheet" href="./css/iconfont.css" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" rel="stylesheet">
-    <script language="javascript" src="http://webapi.amap.com/maps?v=1.4.10&key=8845df0c0040e4aa27ceb18ad84dfdf9&plugin=Map3D,AMap.DistrictLayer,AMap.ControlBar,AMap.DistrictSearch"></script>
-    <script src="http://webapi.amap.com/loca?key=8845df0c0040e4aa27ceb18ad84dfdf9"></script>
+    <script language="javascript" src="https://webapi.amap.com/maps?v=1.4.10&key=8845df0c0040e4aa27ceb18ad84dfdf9&plugin=Map3D,AMap.DistrictLayer,AMap.ControlBar,AMap.DistrictSearch"></script>
+    <script src="https://webapi.amap.com/loca?key=8845df0c0040e4aa27ceb18ad84dfdf9"></script>
    
     <script type="text/javascript" src="https://cache.amap.com/lbs/static/addToolbar.js"></script>
     <script src="//a.amap.com/Loca/static/mock/bj_heat_grid.js"></script>
@@ -73,10 +73,11 @@
             <div id="btn-login" class='btn-login'>LOGIN</div>
             </div>
         </div>
+        
     </div>
     <div id="container"  style="width:100%; height:100%;resize:both;position: fixed;z-index: 3;"></div>
     <div id="container2" style="width:100%; height:100%;resize:both;position: fixed; z-index: 2;"></div>
-    <div class="echart-lcon" style="display:none;">
+    <div class="echart-lcon" >
         <div class="item" title="北京东方联合投资管理有限公司">
             <div class="num" onclick="mapPanto(0)">1</div><div class="pie" id="lpie1"></div><div class="line"><div  id="lline1"></div></div>
         </div>
@@ -96,7 +97,7 @@
                 <div class="num" onclick="mapPanto(5)">6</div><div class="pie" id="lpie6"></div><div class="line"><div  id="lline6"></div></div>
         </div>
     </div>
-    <div class="echart-con" style="display:none;">
+    <div class="echart-con" >
         <!--echarts图表-->
          <div class="item">
             <div id="line1" class="chart"></div>
@@ -137,18 +138,14 @@
         </div>
     </div>
     <div class="step3-mask"></div>
-    <div class="overview" style="display: none;">
+    <div class="overview" >
         <iframe class="map" src="overview.html" frameborder="0"></iframe>
     </div>
     <div class="temp-box temp-box1">
         <img src="./img/temp-box1.png" />
     </div>
     <div class="temp-box temp-box2">
-        <div class="bg-box"></div>
-        <div class="bg-box"></div>
-        <div class="bg-box"></div>
-        <div class="bg-box"></div>
-        <div class="bg-box"></div>
+        <img src="./img/temp-box4.png" />
     </div>
     <div class="temp-box temp-box3">
         <img src="./img/temp-box3.png" />
