--- a/index.html
+++ b/index.html
@@ -4,16 +4,32 @@
 <head>
     <meta name="viewport" content="width=device-width initial-scale=1.0 maximum-scale=1.0 user-scalable=0">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>3D地图</title>
+    <title>互联网金融动态监测可视化平台</title>
     <link href="./css/3Dmap.css" rel="stylesheet" />
+    <link href="./css/word.css" rel="stylesheet" />
+    <link rel="stylesheet" href="./css/iconfont.css" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" rel="stylesheet">
+    <script language="javascript" src="https://webapi.amap.com/maps?v=1.4.10&key=8845df0c0040e4aa27ceb18ad84dfdf9&plugin=Map3D,AMap.DistrictLayer,AMap.ControlBar,AMap.DistrictSearch"></script>
+    <script src="https://webapi.amap.com/loca?key=8845df0c0040e4aa27ceb18ad84dfdf9"></script>
    
-    <script src="//webapi.amap.com/loca?key=8845df0c0040e4aa27ceb18ad84dfdf9"></script>
+    <script type="text/javascript" src="https://cache.amap.com/lbs/static/addToolbar.js"></script>
+    <script src="//a.amap.com/Loca/static/mock/bj_heat_grid.js"></script>
     <script src="//a.amap.com/jsapi_demos/static/citys.js"></script>
+    <script src="./js/step1/data.js"></script>
+    <script src="./js/step2/data.js"></script>
+    <script src="./js/step2/data2.js"></script>
+    <script src="./js/step3/data3.js"></script>
+    <script src="./js/step3/step3.2d.js"></script>
+    <script src="./js/step3/step3.3d.js"></script>
+    <script src="./js/tween.min.js"></script>
+    <script src="https://a.amap.com/Loca/static/mock/adcodes.js"></script>
+   
 </head>
 
 <body>
     <div class="header">
-        <div class="title">jusfoun-FE - 空间信息可视化交互平台
+        <div class="title">
+            <img src='./img/page-title2.png' />
             <div class="title-after">
                 <div class="title-after-img"></div>
                 <div class="title-after-inimg"></div>
@@ -22,43 +38,141 @@
         </div>
         <ul class="nav">
             <li>
-                <a href="#step=1">全国</a>
+                <a class="menu-step1" href="#step=1">全国</a>
             </li>
             <li>
-                <a href="#step=2">北京地区</a>
+                <a class="menu-step2" href="#step=2">北京地区</a>
             </li>
             <li>
-                <a href="#step=3">朝阳地区</a>
+                <a class="menu-step3" href="#step=3">朝阳地区</a>
             </li>
             <li>
-                <a href="#">信息统计</a>
+                <a class="menu-step4" href="#step=4">信息统计</a>
+            </li>
+            <li class="op-btn start" title="播放动画" onclick="playAnimation(this)">
             </li>
         </ul>
     </div>
-    <div id="container" style="width:100%; height:100%;resize:both;"></div>
-    <div class="echart-con">
-        <div class="item" id="lineWarp">
-            <div id="line" class="chart"></div>
+    <div class="ring">
+        <div>1</div>
+        <div>2</div>
+        <div>4</div>
+        <div>5</div>
+        <div>6</div>
+        <div>7</div>
+        <div>8</div>
+        <div>9</div>
+    </div>
+    <div id="login" class='login loaded'>
+        <div id="anitOut" style="height:1400px"></div>
+        <div class="login-ctx">
+            <div class="login-title">Welcome</div>
+            <div class="form">
+            <div class="itemrow"><i class="iconfont icon-user2"></i><input id='txt-name' class='txt txt-name'></div>
+            <div class="itemrow"><i class="iconfont icon-3702mima"></i><input id='txt-pwd'  class='txt txt-pwd' type='password'></div>
+            <div id="btn-login" class='btn-login'>LOGIN</div>
+            </div>
         </div>
-        <div class="item" id="hbarWarp">
-            <div id="hbar" class="chart"></div>
+        
+    </div>
+    <div id="container"  style="width:100%; height:100%;resize:both;position: fixed;z-index: 3;"></div>
+    <div id="container2" style="width:100%; height:100%;resize:both;position: fixed; z-index: 2;"></div>
+    <div class="echart-lcon" >
+        <div class="item" title="北京东方联合投资管理有限公司">
+            <div class="num" onclick="mapPanto(0)">1</div><div class="pie" id="lpie1"></div><div class="line"><div  id="lline1"></div></div>
         </div>
-        <div class="item" id="baseLineWarp">
-            <div id="baseLine" class="chart"></div>
+        <div class="item" title="北京瓴岳信息技术有限公司">
+            <div class="num"  onclick="mapPanto(1)">2</div><div class="pie" id="lpie2"></div><div class="line"><div  id="lline2"></div></div>
         </div>
-        <div class="item" id="vbarWarp">
-            <div id="vbar" class="chart"></div>
+        <div class="item" title="北京乐融多源信息技术有限公司">
+            <div class="num" onclick="mapPanto(2)">3</div><div class="pie" id="lpie3"></div><div class="line"><div  id="lline3"></div></div>
+        </div>
+        <div class="item" title="贝壳金科控股有限公司">
+            <div class="num" onclick="mapPanto(3)">4</div><div class="pie" id="lpie4"></div><div class="line"><div  id="lline4"></div></div>
+        </div>
+        <div class="item" title="北京钱得乐科技有限公司">
+            <div class="num" onclick="mapPanto(4)">5</div><div class="pie" id="lpie5"></div><div class="line"><div  id="lline5"></div></div>
+        </div>
+        <div class="item" title="北京玖富普惠信息技术有限公司">
+                <div class="num" onclick="mapPanto(5)">6</div><div class="pie" id="lpie6"></div><div class="line"><div  id="lline6"></div></div>
+        </div>
+    </div>
+    <div class="echart-con" >
+        <!--echarts图表-->
+         <div class="item">
+            <div id="line1" class="chart"></div>
+        </div>
+        <div class="item">
+                <div id="line2" class="chart"></div>
+            </div>
+        <div class="item">
+            <div id="bar1" class="chart"></div>
+        </div>
+        <div class="item">
+            <div id="line3" class="chart"></div>
+        </div>
+        <div class="item">
+            <div id="bar2" class="chart"></div>
         </div>
     </div>
 
+    <div class="top-panel"></div>
     <div class="con-panel left-panel"></div>
     <div class="con-panel right-panel"></div>
 
+    <div class="con-statis">
+        <div class="base-info">
+            <label class="name"></label>
+            <label class="time">0000-00-00 00:00</label>
+            <label class="weather"><i id="iconWeather" class="iconfont icon-fine_icon"></i>/<span title="当前温度" id="temperature">15</span>℃</label>
+        </div>
+        <div class="turnover">
+            <label class="lbl-name">累计成交量</label>
+            <img src="./img/light9.png" />
+            <div class="numberRun1"></div>
+        </div>
+        <div class="nums">
+            <label class="lbl-name">平台数量</label>
+            <div class="numberRun2"></div>
+            <img src="./img/light8.png" />
+        </div>
+    </div>
+    <div class="step3-mask"></div>
+    <div class="overview" >
+        <iframe class="map" src="overview.html" frameborder="0"></iframe>
+    </div>
+    <div class="temp-box temp-box1">
+        <img src="./img/temp-box1.png" />
+    </div>
+    <div class="temp-box temp-box2">
+        <img src="./img/temp-box4.png" />
+    </div>
+    <div class="temp-box temp-box3">
+        <img src="./img/temp-box3.png" />
+    </div>
+    <div class="word-container" style="display: none;">
+        <div class="word w1"><span>010</span><span>110</span><span>1011</span><span>110</span><span>000</span><span>0100</span><span>1101</span><span>1011</span><span>111</span><span>100</span><span>001</span><span>0010</span><span>111</span></div>
+        <div class="word w2"><span>010</span><span>110</span><span>11101</span><span>110</span><span>000</span><span>0110</span><span>111</span><span>1001</span><span>1110</span><span>100</span><span>001</span><span>0000</span><span>111</span></div>
+        <div class="word w3"><span>010010010</span><span>110</span><span>010010010</span><span>110</span><span>101</span><span>110010010</span><span>000</span><span>010010010</span><span>111</span><span>101010</span><span>111010010</span><span>101100</span><span>1101</span><span>1010</span><span>001010</span></div>
+        <div class="word w4"><span>0111110</span><span>110000</span><span>101</span><span>11111101110</span><span>01100</span><span>0111010</span><span>1111</span><span>101</span><span>111</span><span>100</span><span>001</span><span>001100</span><span>111</span><span>011100</span><span>1111111111</span></div>
+        <div class="word w6"><span>01011</span><span>1101</span><span>101</span><span>110</span><span>00011</span><span>010</span><span>11001</span><span>101</span><span>11001</span><span>100</span><span>0001</span><span>00110</span><span>11111</span></div>
+    </div>
+    <script src='./js/loginbg.js'></script>
+    <script src="./js/step3/step3.tips.js"></script>
     <script src="./js/echarts.min.js" type="text/javascript"></script>
-    <script src="./js/jquery.min.js" type="text/javascript"></script>
+    <script src="js/jquery.min.js"></script>
     <script src="./js/util.js" type="text/javascript"></script>
     <script src="./js/baseChart.js" type="text/javascript"></script>
+    <script src="./js/polygonizr.min.js" type="text/javascript"></script>
     <script src="./js/3Dmap.js" type="text/javascript"></script>
+    <script src="./js/numberAnimate.js" type="text/javascript"></script>
+    <script src="./js/autopaly.js"></script>
+    <script src="./js/zrender.js"></script>
+    <script src="./js/step0/index.js"></script>
+    <script src="./js/step1/index.js"></script>
+    <script src="./js/step2/index.js"></script>
+    <script src="./js/step3/index.js"></script>
+
 </body>
 
 </html>
